--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ html{
 
 body{
     overflow-x: hidden;
+    height: 3000px;
 }
 
 header{
@@ -91,6 +92,11 @@ header .fa-bars{
     display: none;
 }
 
+
+header .fa-times{
+    transform: rotate(180deg);
+}
+
 /* media queries */
 
 @media(max-width:768px){
@@ -103,7 +109,7 @@ header .fa-bars{
 
     header .nav{
         position: fixed;
-        top: 50%;
+        top: -100rem;
         left: 50%;
         transform: translate(-50% , -50%);
         box-shadow: 0 0 0 100vh rgba(0, 0, 0,.3);
@@ -111,11 +117,28 @@ header .fa-bars{
         border: .3rem solid var(--blue) !important;
         background: #fff;
         width: 95%;
+        opacity: 0;
     }
 
     header .nav ul{
         width: 100%;
         flex-flow: column;
         padding: 2rem 0;
+    }
+
+    header .nav ul li{
+        width: 100%;
+        text-align: center;
+        margin: 1rem 0;
+    }
+
+    header .nav ul li a{
+        font-size: 3rem;
+        display: block;
+    }
+
+    header .nav-toggle{
+        top: 50%;
+        opacity: 1;
     }
 }
