--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,45 @@ body{
     height: 3000px;
 }
 
+section{
+    overflow: hidden;
+}
+
+.button{
+    height: 3.6rem;
+    width: 15rem;
+    background: var(--blue);
+    color: #fff;
+    font-size: 1.7rem;
+    text-transform: capitalize;
+    border-radius: .5rem;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    overflow: hidden;
+    margin: 1rem 0;
+    
+}
+
+.button::before{
+    content: '';
+    position: absolute;
+    top: -100%; left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: var(--black);
+    z-index: -1;
+    transition: .2s linear;
+}
+
+.button:hover:before{
+    top: 0%;
+}
+
+.button:hover{
+    box-shadow: .1rem .5rem var(--blue),
+                 0 .3rem .5rem rgba(0, 0, 0,.3);
+}
 header{
     width: 100%;
     position: fixed;
@@ -96,6 +135,35 @@ header .fa-bars{
 header .fa-times{
     transform: rotate(180deg);
 }
+
+.home .content h1{
+    font-size: 5rem;
+    color: var(--black);
+}
+
+.home .content h1 span{
+    color: var(--blue);
+}
+
+.home .content h3{
+    font-size: 4rem;
+    color: var(--black);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* media queries */
 
