--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,11 @@ header{
     z-index: 1000;
 
 }
+.header-active{
+    background: #fff;
+    box-shadow: 0 .1rem .3rem rgba(0, 0, 0,.3);
+    padding: .5rem 1rem;
+}
 
 header .container{
     display: flex;
@@ -151,14 +156,31 @@ header .fa-times{
 }
 
 
+.about{
+    background: #eee;
+
+}
+
+.about .content .box{
+    margin: 3rem 0;
+}
 
 
+.about .content .box h3{
+    font-size: 2.5rem;
+    color: var(--black);
+}
 
+.about .content .box h3 i{
+    padding: 0 1rem;
+    color: var(--blue);
+}
 
-
-
-
-
+.about .content .box p{
+    font-size: 1.7rem;
+    padding-left: 6rem;
+    color: #666;
+}
 
 
 
